<resources>
    <string name="app_name">MemeBot</string>
    <string name="title_activity_suggestions">SuggestionsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_image_scroll">ImageScrollActivity</string>
    <string name="minimum_number_of_upvotes">Minimum number of upvotes</string>
    <string name="choose_listing">Choose Listing</string>
    <string name="top_listing_category">top</string>
    <string name="hot_listing_category">hot</string>
    <string name="new_listing_category">new</string>
    <string name="rising_listing_category">rising</string>
    <string name="memes">memes</string>
    <string name="subreddit_name">Subreddit Name</string>
    <string name="number_zero">0</string>
    <string name="submit">Submit</string>
    <string name="send_memes">SEND MEMES</string>
    <string name="testing">testing</string>
    <string name="settings">Settings</string>
    <string name="suggestions">Suggestions</string>
    <string name="quick_request">Quick Request</string>
    <string name="favorites">favorites</string>
    <string-array name="suggestions">
        <item>memes</item>
        <item>dankmemes</item>
        <item>confidentlyincorrect</item>
        <item>programmerhumor</item>
        <item>me_irl</item>
        <item>holup</item>
        <item>madlads</item>
        <item>Animemes</item>
        <item>cursedcomments</item>
        <item>CrappyDesign</item>
        <item>funny</item>
        <item>technicallythetruth</item>
    </string-array>
</resources>