<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.inowen.app.gui.QuickRequestActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_gravity="top">

    <TextView
        android:id="@+id/sub_name_textview"
        android:layout_width="301dp"
        android:layout_height="44dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/subreddit_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputSubredditName"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/memes"
        app:layout_constraintStart_toStartOf="@+id/sub_name_textview"
        app:layout_constraintTop_toBottomOf="@+id/sub_name_textview" />

    <TextView
        android:id="@+id/choose_listing_textview"
        android:layout_width="307dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:text="@string/choose_listing"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/inputSubredditName"
        app:layout_constraintTop_toBottomOf="@+id/inputSubredditName" />

    <RadioGroup
        android:id="@+id/listing_category_rg"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:checkedButton="@id/hot_radio_btn">

        <RadioButton
            android:id="@+id/top_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_listing_category" />

        <RadioButton
            android:id="@+id/hot_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hot_listing_category" />

        <RadioButton
            android:id="@+id/new_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_listing_category" />

        <RadioButton
            android:id="@+id/rising_radio_btn"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:text="@string/rising_listing_category" />
    </RadioGroup>

    <TextView
        android:id="@+id/min_upvotes_textview"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:text="@string/minimum_number_of_upvotes"
        android:textSize="24sp" />

    <SeekBar
        android:id="@+id/min_upvotes_seekbar"
        android:layout_width="256dp"
        android:layout_height="57dp" />

    <TextView
        android:id="@+id/upvotes_count_textview"
        android:layout_marginStart="270dp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="-45dp"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:textSize="20sp"
        android:text="@string/number_zero" />

    <Button
        android:id="@+id/quick_request_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:text="@string/submit"
        android:textSize="22sp" />

</LinearLayout>