<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".gui.MainMenu"
    android:background="@drawable/main_screen_bg"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/send_memes_btn"
        android:shadowColor="@color/colorPrimaryDark"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/send_memes"/>

    <Button
        android:id="@+id/suggestions_btn"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:text="@string/suggestions"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="91dp"
        android:layout_height="78dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/settings"
        android:visibility="gone"

        />

    <Button
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/testing"/>

    <Button
        android:id="@+id/quick_request_btn"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/quick_request"/>

    <Button
        android:id="@+id/favorites_btn"
        android:layout_width="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_height="69dp"
        android:text="@string/favorites"/>

</LinearLayout>